# app/serializers/concerns/access_description_serializable.rb
@@ -4,7 +4,7 @@ module AccessDescriptionSerializable
   extend ActiveSupport::Concern
   included do
     attribute :access_description do |the_object|
-      the_object.access_description.body.to_html
+      the_object.access_description.body if the_object.access_description.present?
     end
   end
 end
